# CMake

./: .gitignore  CMakeLists.txt  Demo.cpp  build.sh  config.h.in
Math/: CMakeLists.txt  MathFunction.cpp  MathFunction.h
